src/objects/CustomObject22__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ServiceContract</relationshipLabel>
        <relationshipName>ServiceContractkhmc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adress__c</fullName>
        <formula>AccountName__r.address__c</formula>
        <label>客户地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllAccount__c</fullName>
        <formula>ServiceCharge1__c  + ServiceCharge2__c  + ServiceCharge3__c  + ServiceCharge4__c  + ServiceCharge5__c  + ServiceCharge6__c  + ServiceCharge7__c  + ServiceCharge8__c  + ServiceCharge9__c  + ServiceCharge10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>标准合同金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDX__c</fullName>
        <label>标准合同金额（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(AllAccount__c = 0, 0, SJAmount__c  /  AllAccount__c)</formula>
        <label>折扣(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndTime10__c</fullName>
        <formula>InmarsatSerial10__r.warrantyEnd__c</formula>
        <label>保修截止日期10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime1__c</fullName>
        <formula>InmarsatSerial01__r.warrantyEnd__c</formula>
        <label>保修截止日期1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime2__c</fullName>
        <formula>InmarsatSerial02__r.warrantyEnd__c</formula>
        <label>保修截止日期2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentModel10__c</fullName>
        <label>设备型号10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentModel1__c</fullName>
        <formula>InmarsatSerial01__r.ProductModelCG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备型号1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentModel2__c</fullName>
        <formula>InmarsatSerial02__r.ProductModelCG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备型号2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName10__c</fullName>
        <label>设备名称10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName1__c</fullName>
        <formula>InmarsatSerial01__r.ProductS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备名称1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName2__c</fullName>
        <formula>InmarsatSerial02__r.ProductS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备名称2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否上传附件</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InmarsatSerial01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountName__c</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>保修合同</relationshipLabel>
        <relationshipName>sb5fmH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InmarsatSerial02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountName__c</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>保修合同</relationshipLabel>
        <relationshipName>sb5gSb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InmarsatSerial03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountName__c</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>保修合同 (设备序列号3)</relationshipLabel>
        <relationshipName>sb5gVQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>保修合同</relationshipLabel>
        <relationshipName>ServiceContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentChargeDX__c</fullName>
        <label>付款费用（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCharge__c</fullName>
        <label>付款费用（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>AccountName__r.Phone</formula>
        <label>客户电话</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJAmount__c</fullName>
        <label>成交金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SJDXAmount__c</fullName>
        <label>成交金额（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCharge10__c</fullName>
        <formula>InmarsatSerial10__r.ServiceCharge__c</formula>
        <label>年保修金额10（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceCharge1__c</fullName>
        <formula>InmarsatSerial01__r.ServiceCharge__c</formula>
        <label>年保修金额1（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceCharge2__c</fullName>
        <formula>InmarsatSerial02__r.ServiceCharge__c</formula>
        <label>年保修金额2（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UsefulLife10__c</fullName>
        <formula>InmarsatSerial10__r.UsefulLife__c</formula>
        <label>使用年限10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsefulLife1__c</fullName>
        <formula>InmarsatSerial01__r.UsefulLife__c</formula>
        <label>使用年限1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsefulLife2__c</fullName>
        <formula>InmarsatSerial02__r.UsefulLife__c</formula>
        <label>使用年限2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>installationdate10__c</fullName>
        <formula>InmarsatSerial10__r.installationdate__c</formula>
        <label>安装日期10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>installationdate1__c</fullName>
        <formula>InmarsatSerial01__r.installationdate__c</formula>
        <label>安装日期1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>installationdate2__c</fullName>
        <formula>InmarsatSerial02__r.installationdate__c</formula>
        <label>安装日期2</label>
        <type>Date</type>
    </fields>
    <label>保修合同</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>BXHT{00000000}</displayFormat>
        <label>保修合同编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>保修合同</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>shangchuanfujian</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
	OR(
	ISPICKVAL(Approval__c, &quot;已审批&quot;),
	ISPICKVAL(Approval__c, &quot;待审批&quot;)
	),
	Field1__c = false,
	!IsNew()

)</errorConditionFormula>
        <errorMessage>上传附件后才能提交审批</errorMessage>
    </validationRules>
</CustomObject>